updates test suite and version number

--- a/generators/css/templates/configs/default/partials/_colors.scss
+++ b/generators/css/templates/configs/default/partials/_colors.scss
@@ -1,17 +1,17 @@
 //  TODO: Improve this
 
-$gray_1:          #777777;
-$gray_2:          #e0e0e0;
-$gray_3:          #eeeeee;
-$gray_4:          #fafafa;
+$gray-1:          #777777;
+$gray-2:          #e0e0e0;
+$gray-3:          #eeeeee;
+$gray-4:          #fafafa;
 
-$black_1:         #000000;
-$black_2:         #212121;
-$black_3:         #303030;
-$black_4:         #424242;
+$black-1:         #000000;
+$black-2:         #212121;
+$black-3:         #303030;
+$black-4:         #424242;
 
-$white_1:         #ffffff;
-$white_2:         #f1f1f1;
+$white-1:         #ffffff;
+$white-2:         #f1f1f1;
 
 $red:             #f44336;
 $pink:            #e91e63;
