--- a/generators/css/templates/exports/_default.scss
+++ b/generators/css/templates/exports/_default.scss
@@ -6,6 +6,8 @@
 @import "../helpers/mixins/pre-flex-center-hack";
 @import "../helpers/mixins/visually-hide";
 // 4. <-core->
+@import "../core/reset";
+@import "../core/base";
 // 5. <-vendors->
 // 6. <-layouts->
 // 7. <-modules->
