--- a/generators/css/templates/exports/_default.scss
+++ b/generators/css/templates/exports/_default.scss
@@ -11,6 +11,7 @@
 // 5. <-vendors->
 // 6. <-layouts->
 // 7. <-modules->
+@import "../modules/heading/index";
 // 8. <-units->
 // 9. <-pages->
 // 10. <-hotfixes->
