--- a/generators/css/templates/exports/_default.scss
+++ b/generators/css/templates/exports/_default.scss
@@ -11,6 +11,7 @@
 // 5. <-vendors->
 // 6. <-layouts->
 // 7. <-modules->
+@import "../modules/text/index";
 @import "../modules/link/index";
 @import "../modules/button/index";
 @import "../modules/heading/index";
