--- a/generators/css/templates/helpers/mixins/_bg-cover.scss
+++ b/generators/css/templates/helpers/mixins/_bg-cover.scss
@@ -3,8 +3,7 @@
 //  Sets a given background image to cover the bg, centered
 //
 //  Styleguide helpers.mixins.bg-cover
-@mixin bg-cover($image-url) {
-  background-image: url($image-url);
+@mixin bg-cover() {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
